<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DicePaper</string>
    <string name="Univers">Univers</string>
    <string name="newUniverse">Créer un Univers</string>
    <string name="loadUniverse">Modifier un Univers</string>
    <string name="deleteUniverse">Supprimer un Univers</string>
    <string name="enterUniverse">Entrer dans un Univers</string>
    <string name="nameUniverse">Nom du nouvel univers :</string>
    <string name="errorCreateUniverse">Erreur, échec de la création d\'univers</string>
    <string name="listUniverse">Liste des univers :</string>
    <string name="ok">Ok</string>
    <string name="cancel">Annuler</string>
    <string name="buildUnivDescription">
        Dans ce menu, vous pouvez paramétrer votre univers comme vous le souhaitez, que ce soit pour
        la fiche de personnage ou pour la façon dont les jets de dés se font.
    </string>
    <string name="defineUnivTitle">Définition de l\'univers</string>
    <string name="defineCharSheet">Définir le template de fiche de personnage</string>
    <string name="defineDiceRoll">Définir les jets de dés</string>
    <string name="charSheetBuildTitle">Définition de la fiche de personnage</string>
    <string name="addCharac">Ajouter une caractéristique</string>
    <string name="addJauge">Ajouter une Jauge</string>
    <string name="successCreateCarac">Ajout de la caractéristique</string>
    <string name="errorCreate">Echec de la création</string>
    <string name="successCreateJauge">Ajout de la jauge</string>
    <string name="successCreateUtilitaire">Ajout de l\'utilitaire</string>
    <string name="addComp">Ajouter une compétence</string>
    <string name="successCreateComp">Ajout de la compétence</string>
    <string name="addUtil">Ajouter un utilitaire</string>
</resources>
