<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:textStyle="bold"
              android:textSize="25dp"
              android:id="@+id/univTitle"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:text="@string/defineUnivTitle"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/buildUnivDescription"/>
    <Button
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_height="wrap_content"
            android:id="@+id/defineCharSheet"
            android:text="@string/defineCharSheet"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/defineDiceRoll"
            android:text="@string/defineDiceRoll"/>
</LinearLayout>